fixing figure and image spacing to be equivalent

--- a/_sass/child-theme/base/_base.scss
+++ b/_sass/child-theme/base/_base.scss
@@ -6,7 +6,8 @@ h1, h2, h3, h4, h5, h6 {
 
 figure {
   display: table;
-  margin: 2em auto;
+  margin: 0em auto 1.3em;
+  font-size: 0.9em;
 }
 
 img {
