--- a/_sass/child-theme/components/_figures.scss
+++ b/_sass/child-theme/components/_figures.scss
@@ -38,6 +38,7 @@ figure.align {
 figcaption {
   display: table-caption;
   caption-side: bottom;
+  margin-bottom: 0;
 }
 
 .img-border {
